--- a/styles_2.css
+++ b/styles_2.css
@@ -1,12 +1,5 @@
 @import url(https://unpkg.com/ress/dist/ress.min.css);
 
-.wrapper {
-  width: 100%;
-  height: 100vh;
-  border: 1vh solid #76c4c6;
-  background-color: white;
-}
-
 article {
   display: flex;
   justify-content: center;
@@ -14,10 +7,9 @@ article {
 }
 
 section {
-  width: 100%;
-  height: 100%;
-  padding: 85px 5%;
-  background-color: beige;
+  padding: 75px 5% 20px 5%;
+  border: 0.5vh solid #76c4c6;
+  background-color: white;
 }
 
 ul {
@@ -27,16 +19,19 @@ ul {
 .stutus-bar {
   display: flex;
   justify-content: center;
+  margin-bottom: 40px;
 }
 
 .starus-bar__column {
-  background-color: antiquewhite;
   width: 33%;
+  align-items: center;
 }
 
 .starus-bar__column:nth-child(2) {
   display: flex;
   justify-content: center;
+  font-size: 1.2rem;
+  font-weight: 600;
 }
 
 .starus-bar__column:last-child {
@@ -44,6 +39,123 @@ ul {
   justify-content: flex-end;
 }
 
-.Currently-playing {
+.currently-playing {
   display: flex;
+  justify-content: center;
+}
+
+.box {
+  margin-left: 4%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  font-weight: 800;
+}
+
+.playing-Album {
+  width: 150px;
+  height: 150px;
+  background-color: yellow;
+  border: 3px black solid;
+  border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.currently-playing__title {
+  font-size: 300%;
+  margin-bottom: 10px;
+}
+
+.currently-playing__text {
+  font-size: 100%;
+}
+
+.btn-bar {
+  display: flex;
+  justify-content: center;
+  margin: 40px 0;
+}
+
+.btn {
+  background-color: white;
+  border: 3px black solid;
+  font-size: 1.5rem;
+  font-weight: 400;
+  box-shadow: 0 5px;
+}
+
+.btn-bar__play {
+  height: 70px;
+  width: 170px;
+  border-radius: 20px;
+  font-size: 150%;
+}
+
+.btn-bar__heart {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  margin-left: 3%;
+}
+
+.btn-bar__plus {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  margin-left: 3%;
+}
+
+.fa-play {
+  margin-right: 7%;
+}
+
+.icon {
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 30px;
+}
+
+.icon__color {
+  width: 60px;
+  height: 60px;
+  border: 3px black solid;
+  border-radius: 12px;
+  display: flex;
+}
+
+.icon:first-child .icon__color {
+  background-color: tomato;
+}
+
+.icon:nth-child(2) .icon__color {
+  background-color: pink;
+}
+
+.icon:nth-child(3) .icon__color {
+  background-color: blue;
+}
+
+.icon:last-child .icon__color {
+  background-color: aquamarine;
+}
+
+.icon__info {
+  margin-left: 3%;
+  text-align: left;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.icon__info > h3 {
+  font-weight: 900;
+  font-size: 1.3rem;
+  margin-bottom: 5%;
+}
+
+.icon__info > p {
+  font-weight: 400;
 }
