--- a/css/styles.css
+++ b/css/styles.css
@@ -1,35 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500&display=swap");
+@import "reset.css";
+@import "status-bar.css";
 
 body {
   font-family: "Noto Sans JP", sans-serif, "Segoe UI", Tahoma, Geneva, Verdana;
-}
-
-.status-bar {
-  display: flex;
-  justify-content: center;
-}
-
-.status-bar__column {
-  width: 33%;
-}
-
-.status-bar__column:first-child span {
-  margin-right: 8px;
-}
-
-.status-bar__column:nth-child(2) {
-  display: flex;
-  justify-content: center;
-}
-
-.status-bar__column:last-child {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.status-bar__column .fa-battery-three-quarters {
-  margin: 0 5px;
 }
 
 .welcome-header {
@@ -38,4 +12,9 @@ body {
 
 .welcome-header__text {
   color: #949494;
+}
+
+#login-form {
+  display: flex;
+  flex-direction: column;
 }
