--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,14 @@ body {
 }
 
 .welcome-header {
-  margin: 50px 30px;
+  margin: 90px 0 50px 0;
   text-align: center;
+}
+
+.welcome-header__title {
+  font-size: x-large;
+  font-weight: 700;
+  margin: 50px 0 18px 0;
 }
 
 .welcome-header__text {
