--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500&display=swap");
 @import "reset.css";
+@import "variables.css";
 @import "status-bar.css";
 
 body {
@@ -7,21 +8,49 @@ body {
 }
 
 .welcome-header {
-  margin: 90px 0 50px 0;
+  margin: 90px 0px;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .welcome-header__title {
-  font-size: x-large;
+  font-size: 24px;
   font-weight: 700;
-  margin: 50px 0 18px 0;
+  margin-top: 30px;
+  margin-bottom: 25px;
 }
 
 .welcome-header__text {
   color: #949494;
+  width: 83%;
+  font-size: 16px;
 }
 
 #login-form {
   display: flex;
   flex-direction: column;
+  margin: 0 30px;
+}
+
+#login-form input {
+  border: none;
+  border-bottom: 2px solid #dee5ec;
+  padding: 15px 0px;
+  font-size: 18px;
+  margin-bottom: 25px;
+  transition: border-bottom 0.3s ease-in-out;
+}
+
+#login-form input::placeholder {
+  color: #c8c8c8;
+}
+
+#login-form input:focus {
+  border-bottom: 2px solid var(--green);
+}
+
+#login-form :nth-of-type(3) {
+  border-radius: 5px;
 }
