--- a/css/styles.css
+++ b/css/styles.css
@@ -34,7 +34,8 @@ body {
   margin: 0 30px;
 }
 
-#login-form input {
+.login-form_input,
+.login-form_submit {
   border: none;
   border-bottom: 2px solid #dee5ec;
   padding: 15px 0px;
@@ -47,14 +48,19 @@ body {
   color: #c8c8c8;
 }
 
-#login-form input:focus {
+.login-form_input:focus {
   border-bottom: 2px solid var(--green);
 }
 
-.login-form_email {
+.login-form_label {
+  color: #dee5ec;
+  font-size: 12px;
+}
+
+.login-form_label:focus {
+  display: inherit;
   color: #00b900;
-  display: flex;
-  flex-direction: column;
+  font-size: 12px;
 }
 
 .login-form_submit {
@@ -74,4 +80,8 @@ body {
   justify-content: space-between;
   color: #bec8d2;
   font-size: 16px;
+}
+
+.login-content a {
+  color: inherit;
 }
